# xsettings-kde

./: .gitignore  ChangeLog  ChangeLog.pre-git  Makefile  Makefile.am  README  configure.ac  xsettings-kde.c  xsettings-kde.desktop
src/: Makefile.am
